[gd_scene load_steps=3 format=3 uid="uid://dtecx0urxqeki"]

[ext_resource type="Texture2D" uid="uid://cwe68wpxqyjx3" path="res://puzzle-icon-256x256-ffgg8o4u.png" id="1_m4235"]
[ext_resource type="Script" uid="uid://c3xbcbmkryc4m" path="res://scenes/level_select_menu.gd" id="1_wyt36"]

[node name="level_select_menu" type="Node2D"]
script = ExtResource("1_wyt36")

[node name="background" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 648.0
size_flags_horizontal = 4
color = Color(0.667969, 0.644485, 0.644485, 1)

[node name="Label" type="Label" parent="."]
process_mode = 3
offset_left = 492.0
offset_top = -8.0
offset_right = 752.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 40
text = "Niveles"

[node name="Label2" type="Label" parent="."]
offset_left = 78.0
offset_top = 44.0
offset_right = 338.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 30
text = "Nivel 1"

[node name="Label3" type="Label" parent="."]
offset_left = 361.0
offset_top = 50.0
offset_right = 621.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 30
text = "Nivel 2"

[node name="Label4" type="Label" parent="."]
offset_left = 675.0
offset_top = 52.0
offset_right = 935.0
offset_bottom = 139.0
theme_override_font_sizes/font_size = 30
text = "Nivel 3
"

[node name="Button" type="Button" parent="."]
offset_left = 41.0
offset_top = 104.0
offset_right = 246.0
offset_bottom = 308.0

[node name="Button2" type="Button" parent="."]
offset_left = 315.0
offset_top = 97.0
offset_right = 520.0
offset_bottom = 302.0

[node name="Button3" type="Button" parent="."]
offset_left = 618.0
offset_top = 94.0
offset_right = 831.0
offset_bottom = 298.0

[node name="Button4" type="Button" parent="."]
offset_left = 910.0
offset_top = 108.0
offset_right = 1105.0
offset_bottom = 303.0

[node name="Button5" type="Button" parent="."]
offset_left = 64.0
offset_top = 382.0
offset_right = 259.0
offset_bottom = 577.0

[node name="Button6" type="Button" parent="."]
offset_left = 323.0
offset_top = 386.0
offset_right = 518.0
offset_bottom = 581.0

[node name="Button7" type="Button" parent="."]
offset_left = 632.0
offset_top = 381.0
offset_right = 827.0
offset_bottom = 576.0

[node name="Button8" type="Button" parent="."]
offset_left = 903.0
offset_top = 381.0
offset_right = 1098.0
offset_bottom = 576.0

[node name="lvl1_completed" type="ColorRect" parent="."]
offset_left = 47.0
offset_top = 111.0
offset_right = 238.0
offset_bottom = 302.0
mouse_filter = 2
color = Color(0.131644, 0.828125, 0.12616, 1)

[node name="lvl2_completed" type="ColorRect" parent="."]
offset_left = 323.0
offset_top = 102.0
offset_right = 514.0
offset_bottom = 293.0
mouse_filter = 2
color = Color(0.460499, 0.84375, 0.0395508, 1)

[node name="lvl3_completed" type="ColorRect" parent="."]
offset_left = 630.0
offset_top = 99.0
offset_right = 821.0
offset_bottom = 290.0
mouse_filter = 2
color = Color(0.69685, 0.925781, 0.133804, 1)

[node name="lvl1_locked" type="ColorRect" parent="."]
offset_left = 47.0
offset_top = 111.0
offset_right = 238.0
offset_bottom = 302.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="lvl2_locked" type="ColorRect" parent="."]
offset_left = 323.0
offset_top = 102.0
offset_right = 514.0
offset_bottom = 293.0
mouse_filter = 2
color = Color(0.996094, 0, 0, 1)

[node name="lvl3_locked" type="ColorRect" parent="."]
offset_left = 630.0
offset_top = 99.0
offset_right = 821.0
offset_bottom = 290.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="lock1" type="Sprite2D" parent="."]
position = Vector2(410, 200)
scale = Vector2(0.59375, 0.59375)
texture = ExtResource("1_m4235")

[node name="lock2" type="Sprite2D" parent="."]
position = Vector2(719, 200)
scale = Vector2(0.59375, 0.59375)
texture = ExtResource("1_m4235")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
